# arrow-rs

./: .gitignore  help.html  settings.html
arrow/: Cargo.toml  all.html  constant.ARROW_VERSION.html  index.html  macro.downcast_dictionary_array.html  macro.downcast_primitive_array.html
arrow/alloc/: constant.ALIGNMENT.html  index.html  trait.Allocation.html
arrow/array/: enum.BufferSpec.html  enum.Capacities.html  fn.as_boolean_array.html  fn.as_decimal_array.html  fn.as_dictionary_array.html  fn.as_fixed_size_list_array.html  fn.as_generic_binary_array.html  fn.as_generic_list_array.html  fn.as_large_list_array.html  fn.as_largestring_array.html  fn.as_list_array.html  fn.as_map_array.html  fn.as_null_array.html  fn.as_primitive_array.html  fn.as_run_array.html  fn.as_string_array.html  fn.as_struct_array.html  fn.as_union_array.html  fn.downcast_array.html  fn.export_array_into_raw.html  fn.layout.html  fn.make_array.html  fn.make_builder.html  fn.make_comparator.html  fn.make_view.html  fn.new_empty_array.html  fn.new_null_array.html  index.html  macro.downcast_dictionary_array.html  macro.downcast_integer.html  macro.downcast_primitive.html  macro.downcast_primitive_array.html  macro.downcast_run_array.html  macro.downcast_run_end_index.html  macro.downcast_temporal.html  macro.downcast_temporal_array.html  struct.ArrayData.html  struct.ArrayDataBuilder.html  struct.ArrayIter.html  struct.BooleanArray.html  (+196 more)
arrow/benches/: cast_kernels.rs  filter_kernels.rs
arrow/buffer/: fn.bitwise_bin_op_helper.html  fn.bitwise_quaternary_op_helper.html  fn.bitwise_unary_op_helper.html  fn.buffer_bin_and.html  fn.buffer_bin_and_not.html  fn.buffer_bin_or.html  fn.buffer_bin_xor.html  fn.buffer_unary_not.html  index.html  struct.BooleanBuffer.html  struct.Buffer.html  struct.MutableBuffer.html  struct.NullBuffer.html  struct.OffsetBuffer.html  struct.RunEndBuffer.html  struct.ScalarBuffer.html
arrow/compute/: enum.DatePart.html  fn.and.html  fn.and_kleene.html  fn.and_not.html  fn.binary.html  fn.binary_mut.html  fn.bit_and.html  fn.bit_or.html  fn.bit_xor.html  fn.bool_and.html  fn.bool_or.html  fn.build_filter.html  fn.can_cast_types.html  fn.cast.html  fn.cast_with_options.html  fn.concat.html  fn.concat_batches.html  fn.date_part.html  fn.day.html  fn.day_dyn.html  fn.doy.html  fn.doy_dyn.html  fn.filter.html  fn.filter_record_batch.html  fn.hour.html  fn.hour_dyn.html  fn.interleave.html  fn.is_not_null.html  fn.is_null.html  fn.lexicographical_partition_ranges.html  fn.lexsort.html  fn.lexsort_to_indices.html  fn.max.html  fn.max_array.html  fn.max_binary.html  fn.max_binary_view.html  fn.max_boolean.html  fn.max_string.html  fn.max_string_view.html  fn.microsecond.html  (+76 more)
arrow/datatypes/: constant.DECIMAL128_MAX_PRECISION.html  constant.DECIMAL128_MAX_SCALE.html  constant.DECIMAL256_MAX_PRECISION.html  constant.DECIMAL256_MAX_SCALE.html  constant.DECIMAL_DEFAULT_SCALE.html  constant.MAX_DECIMAL_FOR_EACH_PRECISION.html  constant.MIN_DECIMAL_FOR_EACH_PRECISION.html  enum.DataType.html  enum.IntervalUnit.html  enum.TimeUnit.html  enum.UnionMode.html  fn.is_validate_decimal256_precision.html  fn.is_validate_decimal_precision.html  fn.validate_decimal256_precision.html  fn.validate_decimal_precision.html  fn.validate_decimal_precision_and_scale.html  index.html  struct.BinaryViewType.html  struct.BooleanType.html  struct.Date32Type.html  struct.Date64Type.html  struct.Decimal128Type.html  struct.Decimal256Type.html  struct.DurationMicrosecondType.html  struct.DurationMillisecondType.html  struct.DurationNanosecondType.html  struct.DurationSecondType.html  struct.Field.html  struct.Fields.html  struct.Float16Type.html  struct.Float32Type.html  struct.Float64Type.html  struct.GenericBinaryType.html  struct.GenericStringType.html  struct.Int16Type.html  struct.Int32Type.html  struct.Int64Type.html  struct.Int8Type.html  struct.IntervalDayTime.html  struct.IntervalDayTimeType.html  (+38 more)
arrow/error/: enum.ArrowError.html  index.html  type.Result.html
arrow/examples/: builders.rs  dynamic_types.rs  tensor_builder.rs
arrow/ffi/: fn.export_array_into_raw.html  fn.from_ffi.html  fn.from_ffi_and_data_type.html  fn.to_ffi.html  index.html  struct.FFI_ArrowArray.html  struct.FFI_ArrowSchema.html
arrow/ffi_stream/: fn.export_reader_into_raw.html  index.html  struct.ArrowArrayStreamReader.html  struct.FFI_ArrowArrayStream.html
arrow/pyarrow/: fn.to_py_err.html  fn.validate_class.html  fn.validate_pycapsule.html  index.html  struct.ArrowException.html  struct.PyArrowType.html  trait.FromPyArrow.html  trait.IntoPyArrow.html  trait.ToPyArrow.html  type.PyArrowException.html
arrow/record_batch/: index.html  struct.RecordBatch.html  struct.RecordBatchIterator.html  struct.RecordBatchOptions.html  trait.RecordBatchReader.html  trait.RecordBatchWriter.html
arrow/src/: error.rs  ffi.rs  record_batch.rs  temporal_conversions.rs
arrow/temporal_conversions/: constant.EPOCH_DAYS_FROM_CE.html  constant.MICROSECONDS.html  constant.MICROSECONDS_IN_DAY.html  constant.MILLISECONDS.html  constant.MILLISECONDS_IN_DAY.html  constant.NANOSECONDS.html  constant.NANOSECONDS_IN_DAY.html  constant.SECONDS_IN_DAY.html  fn.as_date.html  fn.as_datetime.html  fn.as_datetime_with_timezone.html  fn.as_duration.html  fn.as_time.html  fn.date32_to_datetime.html  fn.date64_to_datetime.html  fn.duration_ms_to_duration.html  fn.duration_ns_to_duration.html  fn.duration_s_to_duration.html  fn.duration_us_to_duration.html  fn.time32ms_to_time.html  fn.time32s_to_time.html  fn.time64ns_to_time.html  fn.time64us_to_time.html  fn.time_to_time32ms.html  fn.time_to_time32s.html  fn.time_to_time64ns.html  fn.time_to_time64us.html  fn.timestamp_ms_to_datetime.html  fn.timestamp_ns_to_datetime.html  fn.timestamp_s_to_datetime.html  fn.timestamp_us_to_datetime.html  index.html
arrow/tensor/: fn.compute_column_major_strides.html  fn.compute_row_major_strides.html  index.html  struct.Tensor.html  type.BooleanTensor.html  type.Date32Tensor.html  (+29 more)
parquet/: Cargo.toml  all.html  index.html  macro.experimental.html
(+3757 files in other folders)
