# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "arrow"
version = "5.0.0"
description = "Rust implementation of Apache Arrow"
homepage = "https://github.com/apache/arrow-rs"
repository = "https://github.com/apache/arrow-rs"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
license = "Apache-2.0"
keywords = [ "arrow" ]
include = [
    "benches/*.rs",
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2018"

[lib]
name = "arrow"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = "1.6"
rand = { version = "0.8", default-features = false }
# getrandom is a dependency of rand, not (directly) of arrow
# need to specify `js` feature to build on wasm
getrandom = { version = "0.2", optional = true }
num = "0.4"
csv_crate = { version = "1.1", optional = true, package="csv" }
regex = "1.3"
lazy_static = "1.4"
packed_simd = { version = "0.3", optional = true, package = "packed_simd_2" }
chrono = "0.4"
flatbuffers = { version = "=2.0.0", optional = true }
hex = "0.4"
comfy-table = { version = "4.0", optional = true, default-features = false }
lexical-core = "^0.7"
multiversion = "0.6.1"
bitflags = "1.2.1"

[features]
default = ["csv", "ipc", "test_utils"]
avx512 = []
csv = ["csv_crate"]
ipc = ["flatbuffers"]
simd = ["packed_simd"]
prettyprint = ["comfy-table"]
js = ["getrandom/js"]
# The test utils feature enables code used in benchmarks and tests but
# not the core arrow code itself
test_utils = ["rand/std", "rand/std_rng"]
# this is only intended to be used in single-threaded programs: it verifies that
# all allocated memory is being released (no memory leaks).
# See README for details
memory-check = []

[dev-dependencies]
criterion = "0.3"
flate2 = "1"
tempfile = "3"

[build-dependencies]

[[bench]]
name = "aggregate_kernels"
harness = false

[[bench]]
name = "array_from_vec"
harness = false

[[bench]]
name = "builder"
harness = false

[[bench]]
name = "buffer_bit_ops"
harness = false

[[bench]]
name = "boolean_kernels"
harness = false

[[bench]]
name = "arithmetic_kernels"
harness = false

[[bench]]
name = "cast_kernels"
harness = false

[[bench]]
name = "comparison_kernels"
harness = false

[[bench]]
name = "filter_kernels"
harness = false

[[bench]]
name = "take_kernels"
harness = false

[[bench]]
name = "length_kernel"
harness = false

[[bench]]
name = "bit_length_kernel"
harness = false

[[bench]]
name = "sort_kernel"
harness = false

[[bench]]
name = "partition_kernels"
harness = false

[[bench]]
name = "csv_writer"
harness = false

[[bench]]
name = "json_reader"
harness = false

[[bench]]
name = "equal"
harness = false

[[bench]]
name = "array_slice"
harness = false

[[bench]]
name = "concatenate_kernel"
harness = false

[[bench]]
name = "mutable_array"
harness = false

[[bench]]
name = "buffer_create"
harness = false


# Just silence all of prolematic rules in original code
# This list should be updated during rebasing on new release, before our commits, but after toolchain updates
# That way we would disable only the rules that are violated by upstream code, but not by ours

[lints.rust]
deprecated = "allow"
unreachable_patterns = "allow"
unused_imports = "allow"
unused_must_use = "allow"

[lints.clippy]
# Can drop this rule after rebase on commit 55d6073 "Require Send+Sync bounds for Allocation trait (#1945)", first released in 18.0.0
arc_with_non_send_sync = "allow"
borrow_deref_ref = "allow"
derivable_impls = "allow"
get_first = "allow"
err_expect = "allow"
extra_unused_lifetimes = "allow"
extra_unused_type_parameters = "allow"
into_iter_on_ref = "allow"
manual_bits = "allow"
manual_slice_size_calculation = "allow"
map_flatten = "allow"
needless_borrow = "allow"
needless_borrowed_reference = "allow"
needless_borrows_for_generic_args = "allow"
needless_late_init = "allow"
needless_lifetimes = "allow"
needless_question_mark = "allow"
needless_return = "allow"
non_canonical_partial_ord_impl = "allow"
non_minimal_cfg = "allow"
nonminimal_bool = "allow"
only_used_in_recursion = "allow"
partialeq_to_none = "allow"
redundant_closure = "allow"
redundant_closure_call = "allow"
seek_from_current = "allow"
suspicious_doc_comments = "allow"
to_string_in_format_args = "allow"
unnecessary_cast = "allow"
unnecessary_fallible_conversions = "allow"
unwrap_or_default = "allow"
useless_conversion = "allow"
useless_vec = "allow"
